@@ -4,13 +4,11 @@
    <title>Description of Component Insertion Recipe</title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#0000FF" vlink="#800080">
-
-<h1>Component Insertion Recipe</h1>
-
-A Component Insertion Recipe allows the insertion of new components
-into existing components using the results of database queries to
-specify what to insert and where
-
-For more information see: <a href="component-insertion-help.html">Help</a>
+  <h1>Component Insertion Recipe</h1>
+  A Component Insertion Recipe allows the insertion of new components
+  into existing components using the results of database queries to
+  specify what to insert and where.
+<p>
+  For more information see: <a href="component-insertion-help.html">Help</a>
 </body>
 </html>
